--- a/config/scaffolding/CardIssuanceProject.yml
+++ b/config/scaffolding/CardIssuanceProject.yml
@@ -7,3 +7,8 @@ packages:
   gitUrl: https://github.com/vikashsharma387/CardIssuanceProject
   gitUsername: vikashsharma387
   gitBranch: main
+- name: WmSalesforceRESTProvider
+  gitServerName: VikashgithubRepo
+  gitUrl: https://github.com/vikashsharma387
+  gitUsername: vikashsharma387
+  gitBranch: main
