--- a/config/scaffolding/CardIssuanceProject.yml
+++ b/config/scaffolding/CardIssuanceProject.yml
@@ -12,3 +12,8 @@ packages:
   gitUrl: https://github.com/vikashsharma387
   gitUsername: vikashsharma387
   gitBranch: main
+- name: OnpremWebMethodsCardIssuanceConnections
+  gitServerName: VikashgithubRepo
+  gitUrl: https://github.com/vikashsharma387
+  gitUsername: vikashsharma387
+  gitBranch: main
