--- a/config/scaffolding/CardIssuanceProject.yml
+++ b/config/scaffolding/CardIssuanceProject.yml
@@ -17,3 +17,8 @@ packages:
   gitUrl: https://github.com/vikashsharma387
   gitUsername: vikashsharma387
   gitBranch: main
+- name: OnPremCardIssuanceSFDCServices
+  gitServerName: VikashgithubRepo
+  gitUrl: https://github.com/vikashsharma387
+  gitUsername: vikashsharma387
+  gitBranch: main
